--- a/app/index.html
+++ b/app/index.html
@@ -65,9 +65,10 @@
 <![endif]-->
     <header class="header"> 
         <div class="navbar-info">
-            <div class="container">
-                <div class="col-sm-3 nav-info ca-phone">
-                    <a href="tel:015555589899"><i class="icon ion-ios-telephone-outline"></i> 01 (55) 55 58 98 99</a>
+            <div class="container"> 
+                <div class="col-sm-4 nav-info ca-phone">
+                    <a href="tel:018007143764"><i class="icon ion-ios-telephone-outline"></i>  01 800 714 3764</a>
+                    <a href="tel:018007143759">y  01 800 714 3759</a>
                 </div>
                 <div class="col-sm-5 nav-info ca-phone">
                     <form name="search" class="search-prd">
@@ -77,7 +78,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-sm-4 ca-auth">
+                <div class="col-sm-3 ca-auth">
                     <ul class="list-social-media">
                         <li><a href=""><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
