--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,13 @@
 <html lang="es" ng-app="annalise">
 
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title ng-bind="pageTitle">Moon's Aquariums</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <base href="/">
     <!--Favicon-->
     <link href="img/ico/favicon.ico" rel="shortcut icon" type="favicon">
@@ -28,26 +28,26 @@
     <meta name="twitter:image:src" content="{{ post.urlImages.original }}" ng-if="post">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="{{ post.title }}" ng-if="post"/>
-    <meta property="og:description" content="{{ post.excerpt }}" ng-if="post"/>
-    <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://moons.desarrollapps.com{{ $state.href($state.current.name) }}"/>
+    <meta property="og:title" content="{{ post.title }}" ng-if="post" />
+    <meta property="og:description" content="{{ post.excerpt }}" ng-if="post" />
+    <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://moons.desarrollapps.com{{ $state.href($state.current.name) }}" />
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
 
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/animate.css/animate.css"/>
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css"/>
-    <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css"/>
-    <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css"/>
-    <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css"/>
-    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css"/>
-    <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css"/>
-    <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css"/>
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css"/>
+    <link rel="stylesheet" href="lib/animate.css/animate.css" />
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
+    <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
+    <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
+    <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css" />
+    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
+    <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
+    <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -67,13 +67,15 @@
     <div class="navbar-info">
         <div class="container">
             <div class="col-sm-4 nav-info ca-phone">
-                <a href="tel:018007143764"><i class="icon ion-ios-telephone-outline"></i> 01 800 714 3764</a>
-                <a href="tel:018007143759">y 01 800 714 3759</a>
+                <a href="tel:018007143764"><i class="icon ion-ios-telephone-outline"></i>  01 800 714 3764</a>
+                <a href="tel:018007143759">y  01 800 714 3759</a>
             </div>
-            <div class="col-sm-5 nav-info ca-phone">
-                <form name="search" class="search-prd">
+            <div class="col-sm-5 nav-info ca-phone" ng-controller="GetQuerySearchCtrl as Search">
+                <form name="search" role="search" class="search-prd" ng-submit="Search.globalSearch('product')">
                     <div class="form-group">
-                        <input type="text" class="form-search" id="search" placeholder="Buscar">
+                        <input type="text" class="form-search" id="search" placeholder="Buscar"
+                               ng-model="Search.searchTerm" required>
+
                         <i class="ion-ios-search"></i>
                     </div>
                 </form>
@@ -82,9 +84,7 @@
                 <ul class="list-social-media">
                     <li><a href=""><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://m.me/Moons-Aquariums" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                    <li class="visible-xs"><a
-                            href="intent://send/+5213318959338#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"
-                            target="_blank"><i class="ion-social-whatsapp"></i></a></li>
+                    <li class="visible-xs"><a href="intent://send/+5213318959338#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" target="_blank"><i class="ion-social-whatsapp"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     <li><a href=""><i class="fa fa-instagram"></i></a></li>
                     <li><a href=""><i class="fa fa-youtube"></i></a></li>
@@ -93,34 +93,12 @@
                 </ul>
             </div>
         </div>
-        <div class="col-sm-5 nav-info ca-phone" ng-controller="GetQuerySearchCtrl as Search">
-            <form name="search" role="search" class="search-prd" ng-submit="Search.globalSearch('product')">
-                <div class="form-group">
-                    <input type="text" class="form-search" id="search" placeholder="Buscar"
-                           ng-model="Search.searchTerm" required>
-
-                    <i class="ion-ios-search"></i>
-                </div>
-            </form>
-        </div>
-        <div class="col-sm-4 ca-auth">
-            <ul class="list-social-media">
-                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                <li><a href=""><i class="fa fa-youtube"></i></a></li>
-                <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-            </ul>
-        </div>
-    </div>
     </div>
     <nav class="navbar navbar-default" ng-controller="NavBarCtrl as nav">
         <div class="container container-tab">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainMenu"
-                        aria-expanded="false">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainMenu" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -132,14 +110,12 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
 
-            <<<<<<< HEAD
             <div class="collapse navbar-collapse" id="header-mainMenu">
                 <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">
                     <li>
-                        <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce"
-                           ng-controller="AccessCtrl as Access">
+                        <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
                             <span class="qty-cart">{{ items.length }}</span>
-                            <i class="icon ion-ios-cart-outline"></i><span class="hidden-xs"></span>
+                            <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
                         </a>
                     </li>
                     <li>
@@ -147,9 +123,8 @@
                             <i class="ion-ios-person"></i> Iniciar sesión
                         </a>
                     </li>
-                    <li class="dropdown">
-                        <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue" type="button"
-                           id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <li  class="dropdown">
+                        <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                             <i class="ion-ios-person"></i> {{user.username}}
                             <span class="caret"></span>
                         </a>
@@ -163,46 +138,13 @@
                     <!--<li ng-repeat="item in mainNavMenu">-->
                     <li ng-repeat="item in mainNavMenu">
                         <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
-                        =======
-                        <div class="collapse navbar-collapse" id="header-mainMenu">
-                            <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">
-                                <li>
-                                    <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce"
-                                       ng-controller="AccessCtrl as Access">
-                                        <span class="qty-cart">{{ items.length }}</span>
-                                        <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a ui-sref="register" class="my-account btn-blue" ng-if="!Access.isAuthenticated()">
-                                        <i class="ion-ios-person"></i> Iniciar sesión
-                                    </a>
-                                </li>
-                                <li class="dropdown">
-                                    <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue" type="button"
-                                       id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
-                                       aria-expanded="true">
-                                        <i class="ion-ios-person"></i> {{user.username}}
-                                        <span class="caret"></span>
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                        <li><a ui-sref="dashboard">Mi cuenta</a></li>
-                                        <li><a href="" ng-click="Access.logout()">Cerrar sesión</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <ul class="nav navbar-nav nav-main navbar-right">
-                                <!--<li ng-repeat="item in mainNavMenu">-->
-                                <li ng-repeat="item in mainNavMenu">
-                                    <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
-                                    >>>>>>> development
 
-                                </li>
-                            </ul>
+                    </li>
+                </ul>
 
-                        </div>
             </div>
-            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.navbar-collapse -->
     </nav>
 </header>
 <!-- end header top area -->
@@ -278,6 +220,7 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 </script>
+<toasty></toasty>
 </body>
 
 </html>
