--- a/app/index.html
+++ b/app/index.html
@@ -70,10 +70,10 @@
                     <a href="tel:018007143764"><i class="icon ion-ios-telephone-outline"></i>  01 800 714 3764</a>
                     <a href="tel:018007143759">y  01 800 714 3759</a>
                 </div>
-                <div class="col-sm-5 nav-info xs-hide">
-                    <form name="search" class="search-prd">
+                <div class="col-sm-5 nav-info xs-hide" ng-controller="GetQuerySearchCtrl as Search">
+                    <form name="search" class="search-prd" role="search" class="search-prd" ng-submit="Search.globalSearch('product')">
                         <div class="form-group">
-                            <input type="text" class="form-search" id="search" placeholder="Buscar">
+                            <input type="text" class="form-search" id="search" placeholder="Buscar" ng-model="Search.searchTerm" required>
                             <i class="ion-ios-search"></i>
                         </div>
                     </form>
