--- a/app/index.html
+++ b/app/index.html
@@ -134,12 +134,12 @@
                 </div>
                 <div class="col-sm-3 ca-auth">
                     <ul class="list-social-media">
-                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fa fa-youtube"></i></a></li>
-                        <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="http://facebook.com/MoonsEnMexico" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://twitter.com/MOONS_AQUARIUMS" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/moonsmexico/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCgJdfLAt97jVXdVlzlZNlhQ" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="https://plus.google.com/u/0/108069455211883825420" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/moons-mexico-179aa1145/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
