--- a/app/index.html
+++ b/app/index.html
@@ -237,6 +237,7 @@
     <script src="lib/angular-ui-select/dist/select.js"></script>
     <script src="lib/ng-table/dist/ng-table.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
+    <script src="lib/ngSmoothScroll/lib/angular-smooth-scroll.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js js/annalise.min.js -->
