--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-sm-3 ca-auth">
                     <ul class="list-social-media">
-                        <li><a href="http://facebook.com/MoonsEnMexico" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/MoonsCDMX/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://twitter.com/MOONS_AQUARIUMS" target="_blank"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://www.instagram.com/moonsmexico/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="https://www.youtube.com/channel/UCgJdfLAt97jVXdVlzlZNlhQ" target="_blank"><i class="fa fa-youtube"></i></a></li>
