--- a/app/index.html
+++ b/app/index.html
@@ -71,9 +71,9 @@
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-    <header class="header"> 
+    <header class="header">
         <div class="navbar-info">
-            <div class="container"> 
+            <div class="container">
                 <div class="col-sm-4 nav-info ca-phone">
                     <a href="tel:018007143764"><i class="icon ion-ios-telephone-outline"></i>  01 800 714 3764</a>
                     <a href="tel:018007143759">y  01 800 714 3759</a>
@@ -87,14 +87,14 @@
                     </form>
                 </div>
                 <div class="col-sm-4 hide-tablet">
-                    <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">                      
+                    <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">
                         <li>
                             <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
                                 <span class="qty-cart">{{ items.length }}</span>
                                 <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
                             </a>
                         </li>
-                        <li>  
+                        <li>
                             <a ui-sref="register" class="my-account btn-blue btn-sm" ng-if="!Access.isAuthenticated()">
                                 <i class="ion-ios-person"></i> Iniciar sesión
                             </a>
@@ -102,7 +102,7 @@
                         <li>
                             <div  class="dropdown ">
                                 <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue btn-sm" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                    <i class="ion-ios-person"></i> {{user.username}} 
+                                    <i class="ion-ios-person"></i> {{user.username}}
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -114,14 +114,14 @@
                     </ul>
                 </div>
                 <div class="col-sm-4 hide-desk">
-                    <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">                      
+                    <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">
                         <li class="col-xs-6 col-sm-6">
                             <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
                                 <span class="qty-cart">{{ items.length }}</span>
                                 <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
                             </a>
                         </li>
-                        <li class="col-xs-6 col-sm-6">  
+                        <li class="col-xs-6 col-sm-6">
                             <a ui-sref="register" class="my-account btn-blue-clear" ng-if="!Access.isAuthenticated()">
                                 <i class="ion-ios-person"></i> Iniciar sesión
                             </a>
@@ -129,7 +129,7 @@
                         <div class="col-xs-6 col-sm-6">
                             <div  class="dropdown ">
                                 <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue-clear" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                    <i class="ion-ios-person"></i> {{user.username}} 
+                                    <i class="ion-ios-person"></i> {{user.username}}
                                     <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -169,21 +169,21 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
 
                 <div class="collapse navbar-collapse" id="header-mainMenu">
-                    <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">                      
+                    <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">
                         <li>
                             <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
                                 <span class="qty-cart">{{ items.length }}</span>
                                 <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
                             </a>
                         </li>
-                        <li>  
+                        <li>
                             <a ui-sref="register" class="my-account btn-blue" ng-if="!Access.isAuthenticated()">
                                 <i class="ion-ios-person"></i> Iniciar sesión
                             </a>
                         </li>
                         <li  class="dropdown">
                             <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                <i class="ion-ios-person"></i> {{user.username}} 
+                                <i class="ion-ios-person"></i> {{user.username}}
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -199,10 +199,9 @@
 
                         </li>
                     </ul>
-                    
+
                 </div>
             </div>
-            <!-- /.navbar-collapse -->
         </nav>
     </header>
     <!-- end header top area -->
@@ -278,7 +277,24 @@
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     </script>
-    <toasty></toasty>
+    <script>
+        !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+            n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+            document,'script','https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '342725962844328');
+        fbq('track', 'PageView');
+    </script>
+    <!--Start of Zendesk Chat Script-->
+    <script type="text/javascript">
+        window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+            d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+        _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+            $.src="https://v2.zopim.com/?57UWbcIGahudxsF0fGGc497kpCWb2TEO";z.t=+new Date;$.
+                type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+    </script>
+    <!--End of Zendesk Chat Script-->
 </body>
 
 </html>
