--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,8 @@
     <meta property="og:url" content="http://moons.desarrollapps.com{{ $state.href($state.current.name) }}" />
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.14/angular-aria.js"></script>
 
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
@@ -221,7 +223,6 @@
     <!-- build:js js/vendor.min.js -->
     <!-- bower:js -->
     <script src="lib/jquery/dist/jquery.js"></script>
-    <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
@@ -245,7 +246,6 @@
     <script src="lib/angular-ui-select/dist/select.js"></script>
     <script src="lib/ng-table/dist/ng-table.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
-    <script src="lib/angular-aria/angular-aria.js"></script>
     <script src="lib/angular-material/angular-material.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
