--- a/app/index.html
+++ b/app/index.html
@@ -292,6 +292,10 @@
 <script src="lib/ng-table/dist/ng-table.js"></script>
 <script src="lib/angular-messages/angular-messages.js"></script>
 <script src="lib/angular-material/angular-material.js"></script>
+<script src="lib/angular/angular.js"></script>
+<script src="lib/SHA-1/sha1.js"></script>
+<script src="lib/angulartics/src/angulartics.js"></script>
+<script src="lib/angulartics-google-analytics/lib/angulartics-ga.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
@@ -314,16 +318,11 @@
 <!-- endinject -->
 <!-- endbuild -->
 <script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-101539944-1', { 'cookieDomain': 'none' });
 </script>
 <script>
     !function (f, b, e, v, n, t, s) {
