--- a/app/index.html
+++ b/app/index.html
@@ -39,17 +39,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.14/angular-aria.js"></script>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="lib/animate.css/animate.css"/>
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css"/>
-    <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css"/>
-    <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css"/>
-    <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css"/>
-    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css"/>
-    <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css"/>
-    <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css"/>
-    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css"/>
-    <link rel="stylesheet" href="lib/angular-material/angular-material.css"/>
+    <link rel="stylesheet" href="lib/animate.css/animate.css" />
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/owl.carousel/dist/assets/owl.carousel.css" />
+    <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
+    <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
+    <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css" />
+    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
+    <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
+    <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="lib/angular-material/angular-material.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -262,6 +262,10 @@
 <script src="lib/ng-table/dist/ng-table.js"></script>
 <script src="lib/angular-messages/angular-messages.js"></script>
 <script src="lib/angular-material/angular-material.js"></script>
+<script src="lib/angular/angular.js"></script>
+<script src="lib/SHA-1/sha1.js"></script>
+<script src="lib/angulartics/src/angulartics.js"></script>
+<script src="lib/angulartics-google-analytics/lib/angulartics-ga.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
