--- a/app/index.html
+++ b/app/index.html
@@ -296,6 +296,7 @@
 <script src="lib/SHA-1/sha1.js"></script>
 <script src="lib/angulartics/src/angulartics.js"></script>
 <script src="lib/angulartics-google-analytics/lib/angulartics-ga.js"></script>
+<script src="lib/ng-file-upload/ng-file-upload.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
