--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <meta property="og:description" content="{{ post.excerpt }}" ng-if="post"/>
     <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://moons.mx{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="http://guaumart.com{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
     <!-- build:css css/style.min.css -->
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
     <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <!-- endbower -->
     <!-- inject:css -->
     <link rel="stylesheet" href="/css/main.css">
@@ -255,7 +256,6 @@
 <script src="lib/angular-block-ui/dist/angular-block-ui.js"></script>
 <script src="lib/angular-scroll/angular-scroll.js"></script>
 <script src="lib/ngstorage/ngStorage.js"></script>
-<script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/satellizer/dist/satellizer.js"></script>
 <script src="lib/SHA-1/sha1.js"></script>
 <script src="lib/angulartics/src/angulartics.js"></script>
@@ -264,6 +264,8 @@
 <script src="lib/angular-ui-select/dist/select.js"></script>
 <script src="lib/ng-table/dist/ng-table.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+<script src="lib/sweetalert/dist/sweetalert.min.js"></script>
+<script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js js/annalise.min.js -->
