--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Guaumart - ¡El súper para los MVZ!</title>
+    <title ng-bind="pageTitle">Sydgroup</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
@@ -72,35 +72,6 @@
 </p>
 <![endif]-->
 <header class="header three-rows-nav">
-    <div class="first-row">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3">
-                    <ul class="nav list-icons-add">
-                        <li class="nav-item" ng-repeat="post in contactData">
-                            <a class="nav-link" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
-                                    ng-bind-html="post.content | trustHtml"></span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-6" ng-controller="GetQuerySearchCtrl as Search">
-                    <form name="search" role="search" class="input-search"
-                          ng-submit="Search.globalSearch('product')">
-                        <md-input-container  md-no-float>
-                            <input id="validationServerUsername" placeholder="Buscar"
-                                   aria-describedby="inputGroupPrepend3" ng-model="Search.searchTerm" required>
-                            <md-icon class="fa fa-search"></md-icon>
-                        </md-input-container>
-                    </form>
-                </div>
-                <div class="col-sm-3 social">
-                    <div class="list-icons-add" ng-repeat="social in socialMedia">
-                        <a class="nav-link" href="{{ social.excerpt }}"><i class="{{ social.title }}"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="second-row">
         <div class="container">
             <div class="row">
@@ -110,7 +81,17 @@
                         <img src="img/logo.png" class="logo" alt="Sydgroup">
                     </a>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-5" ng-controller="GetQuerySearchCtrl as Search">
+                    <form name="search" role="search" class="input-search"
+                          ng-submit="Search.globalSearch('product')">
+                        <md-input-container  md-no-float>
+                            <input id="validationServerUsername" placeholder="Buscar"
+                                   aria-describedby="inputGroupPrepend3" ng-model="Search.searchTerm" required>
+                            <md-icon class="fa fa-search"></md-icon>
+                        </md-input-container>
+                    </form>
+                </div>
+                <div class="col-sm-3">
                     <ul class="nav navbar-expand-lg justify-content-end" ng-controller="AccessCtrl as Access">
                         <li>
                             <a ui-sref="shopcart" class="shopping-cart" ng-if="ecommerce"
@@ -142,7 +123,7 @@
         </div>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light nav-theme justify-content-end">
+    <nav class="navbar navbar-expand-lg navbar-dark nav-theme justify-content-end">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
