adjust responsive and details of design

--- a/app/index.html
+++ b/app/index.html
@@ -192,13 +192,13 @@
 <script src="/js/services.js"></script>
 <script src="/js/templates.js"></script>
 <script src="/js/translate.js"></script>
-<script src="/js/shop/controllers.js"></script>
-<script src="/js/shop/services.js"></script>
-<script src="/js/shop/shop.app.js"></script>
 <script src="/js/auth/auth.app.js"></script>
 <script src="/js/auth/controllers.js"></script>
 <script src="/js/auth/directives.js"></script>
 <script src="/js/auth/services.js"></script>
+<script src="/js/shop/controllers.js"></script>
+<script src="/js/shop/services.js"></script>
+<script src="/js/shop/shop.app.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 <script src="https://secure.mlstatic.com/sdk/javascript/v1/mercadopago.js"></script>
@@ -221,7 +221,7 @@
     (function () {
         var options = {
             whatsapp: "+52 1 33 2257 3971", // WhatsApp number
-            company_logo_url: "//static.whatshelp.io/img/flag.png", // URL of company logo (png, jpg, gif)
+            company_logo_url: "https://www.sydgroup.mx/img/logo.png", // URL of company logo (png, jpg, gif)
             greeting_message: "Hola, estamos listos para atenderte, tienes alguna pregunta?", // Text of greeting message
             call_to_action: "Contáctanos", // Call to action
             position: "right", // Position may be 'right' or 'left'
