--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <meta property="og:description" content="{{ post.excerpt }}" ng-if="post"/>
     <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://guaumart.com{{ $state.href($state.current.name) }}"/>
+    <meta property="og:url" content="https://www.sydgroup.mx{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,400,600,700" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
     <!-- build:css css/style.min.css -->
