se agregaron los cambios - Entre calles -  en los templates address-new.hml y shipping.html

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Sydgroup</title>
+    <title ng-bind="pageTitle">{{ initConfig.branchOffice }}</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
