--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,6 @@
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
     <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
-    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- inject:css -->
@@ -71,17 +70,18 @@
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-<header class="header three-rows-nav">
-    <div class="second-row">
+<header class="header one-rows-nav">
+    <div class="first-row">
         <div class="container">
             <div class="row">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="col-sm-4 text-left">
-                    <a ui-sref="home">
-                        <img src="img/logo.png" class="logo" alt="Sydgroup">
-                    </a>
+                <div class="col-sm-2">
+                    <ul class="nav navbar-expand-lg">
+                        <li>
+                            <a href="" class="btn btn-link"><i class="fa fa-building"></i> Tiendas</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-sm-5" ng-controller="GetQuerySearchCtrl as Search">
+                <div class="col-sm-8" ng-controller="GetQuerySearchCtrl as Search">
                     <form name="search" role="search" class="input-search"
                           ng-submit="Search.globalSearch('product')">
                         <md-input-container  md-no-float>
@@ -91,24 +91,17 @@
                         </md-input-container>
                     </form>
                 </div>
-                <div class="col-sm-3">
-                    <ul class="nav navbar-expand-lg justify-content-end" ng-controller="AccessCtrl as Access">
+                <div class="col-sm-2">
+                    <ul class="nav navbar-expand-lg justify-content-end">
                         <li>
-                            <a ui-sref="shopcart" class="shopping-cart" ng-if="ecommerce"
-                               ng-controller="AccessCtrl as Access">
-                                <span class="qty-cart">{{ items.length }}</span>
-                                <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a ui-sref="register" class="btn btn-outline-danger"
+                            <a ui-sref="register" class="btn btn-link"
                                ng-if="!Access.isAuthenticated()">
                                 <i class="ion-ios-person"></i> Iniciar sesión
                             </a>
                         </li>
                         <li class="dropdown">
-                            <button ng-if="Access.isAuthenticated()" class="dropdown-toggle btn btn-dark" type="button"
-                               id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            <button ng-if="Access.isAuthenticated()" class="dropdown-toggle btn btn-link" type="button"
+                                    id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                 <i class="ion-ios-person"></i> {{user.username}}
                                 <span class="caret"></span>
                             </button>
@@ -122,24 +115,34 @@
             </div>
         </div>
     </div>
-
-    <nav class="navbar navbar-expand-lg navbar-dark nav-theme justify-content-end">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg navbar-dark nav-theme">
         <div class="container">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto justify-content-center">
+            <a ui-sref="home" class="navbar-brand">
+                <img src="img/logo.png" class="logo" alt="Hanny Pulido Cosméticos">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav justify-content-center">
                     <li class="nav-item" ng-repeat="item in mainNavMenu">
                         <a class="nav-link" href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-expand-lg" ng-controller="AccessCtrl as Access">
+                    <li>
+                        <a ui-sref="shopcart" class="shopping-cart" ng-if="ecommerce"
+                           ng-controller="AccessCtrl as Access">
+                            <span class="qty-cart">{{ items.length }}</span>
+                            <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
+                        </a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-<!-- end header top area -->
 
 <div class="content-area-web">
     <div ui-view="content"></div>
@@ -176,7 +179,6 @@
 <script src="lib/ng-file-upload/ng-file-upload.js"></script>
 <script src="lib/angular-ui-select/dist/select.js"></script>
 <script src="lib/ng-table/dist/ng-table.js"></script>
-<script src="lib/sweetalert/dist/sweetalert.min.js"></script>
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
