--- a/app/index.html
+++ b/app/index.html
@@ -109,11 +109,12 @@
                         <li class="dropdown">
                             <button ng-if="Access.isAuthenticated()" class="dropdown-toggle btn btn-dark" type="button"
                                id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                <i class="ion-ios-person"></i> {{user.username}}
+                                <i class="ion-ios-person"></i> {{user.username}} <span class="badge badge-danger">1</span>
                                 <span class="caret"></span>
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <a ui-sref="dashboard" class="dropdown-item">Mi cuenta</a>
+                                <a ui-sref="dashboard" class="dropdown-item">Mi cuenta </a>
+                                <a href="" class="dropdown-item">Mensajes <span class="badge badge-danger">1</span></a>
                                 <a href="" ng-click="Access.logout()" class="dropdown-item"> Cerrar sesión</a>
                             </div>
                         </li>
